<resources>
    <string name="app_name">Roomiz</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Sign-in with Google</string>
    <string name="create_account">Create account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_headline">Find your perfect roommate for the next chapter of your life!</string>
    <string name="or">or</string>
    <string name="sign_in">sign in</string>
    <string name="back">Back</string>
    <string name="profile_section">Questions for better match</string>
    <string name="living_space_question">What type of living space are you looking for?</string>
    <string name="apartment">Apartment</string>
    <string name="house">House</string>
    <string name="studio">Studio</string>
    <string name="city_question">Which city would you like to live?</string>
    <string name="price_question">What\'s your price range for monthly rent?</string>
    <string name="rent_value">1000 &#8362;</string>
    <string name="rent_value_format">%1$d &#8362;</string>
    <string name="stay_question">How long are you planing to stay?</string>
    <string name="stay_one_year">1 year +</string>
    <string name="stay_six_months">6 months +</string>
    <string name="stay_three_months">3 month +</string>
    <string name="stay_short">0-3 month</string>
    <string name="amenities_question">Do you have any specific amenities you can\'t live without?</string>
    <string name="amenity_laundry">Laundry</string>
    <string name="amenity_dishwasher">Dishwasher</string>
    <string name="amenity_balcony">Balcony</string>
    <string name="amenity_pet_friendly">Pet friendly</string>
    <string name="amenity_private_bathroom">Private bathroom</string>
    <string name="continue_label">Continue</string>
    <string-array name="cities">
        <item>Select</item>
        <item>Tel Aviv</item>
        <item>Jerusalem</item>
        <item>Haifa</item>
        <item>Beer Sheva</item>
    </string-array>    <string name="profile_intro_title">Let us get to know you better! &#10024;</string>
    <string name="profile_intro_description">Answer a few quick questions so we can find the best match for you!</string>
    <string name="start">Start</string>
    <string name="personal_details_question">What\'s your name?</string>
    <string name="name_hint">Enter full name</string>
    <string name="upload_photo_question">Upload a profile pic</string>
    <string name="take_profile_photo">Take a profile photo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="photo_help">Tap to take a photo with your camera.</string>    <string name="today">Today</string>
    <string name="message_hint">Type your message here</string>
    <string name="send">Send</string>
    <string name="google_web_client_id">694380354177-l2pd15pvndi4dntjkhv0e71k00jscaco.apps.googleusercontent.com</string>
    <string name="google_sign_in_failed">Google sign-in failed. Please try again.</string>
    <string name="profile_save_failed">Could not save your profile. Please try again.</string>
    <string name="camera_permission_denied">Camera permission is needed to take a profile photo.</string>
    <string name="photo_capture_failed">Could not prepare the camera photo.</string>
    <string name="messages_load_failed">Could not load messages.</string>
    <string name="message_send_failed">Could not send your message.</string>
    <string name="name_required">Please enter your name.</string>
    <string name="choose_living_space">Please choose a living space.</string>
    <string name="choose_city">Please choose a city.</string>
    <string name="choose_stay_duration">Please choose a stay duration.</string>
    <string name="profiles_load_failed">Could not load profiles.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="email_invalid">Enter a valid email address.</string>
    <string name="password_too_short">Password must contain at least 6 characters.</string>
    <string name="email_auth_failed">Could not sign in or create an account. Check your email and password.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="email_register_failed">Could not register. This email may already be in use.</string>
    <string name="email_login_failed">Could not log in. Check your email and password.</string></resources>
