<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:paddingStart="36dp"
    android:paddingEnd="36dp">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="232dp"
        android:layout_height="168dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/login_headline"
        android:textColor="@color/login_text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnGoogleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintVertical_bias="0.56" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginBottom="350dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/login_text_primary"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:strokeColor="@color/login_google_border"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>